release: 发布 0.1.1 版本
- 更新所有 pom.xml 版本号至 0.1.1 (移除 SNAPSHOT)
- 更新所有 README.md 和 AI-API.md 文档版本号
- 更新 Java 源码中的版本号引用
- 修复 BaseModel model_shadow 反序列化错误 (NullFieldConversion)
- 修复 JwtTokenResponseFilter 使用默认 guard 而非 'jwt' guard
- 添加 plugin-jar-core 和 plugin-java-core 的 spring.factories
- 优化 PluginClassLoader、HotPluginManager、PluginRouteRegistrar 等插件系统
- 优化 DatabaseQueueDriver